--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: serialize
 version: 0.0.1
 description: A simple console application.
-#dependencies:
+dependencies:
+  mongo_dart:
 #  foo_bar: '>=1.0.0 <2.0.0'
