Added dev dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,5 +2,7 @@ name: serialize
 version: 0.0.1
 description: A simple console application.
 dependencies:
+
+dev_dependencies:
+  test:
   mongo_dart:
-#  foo_bar: '>=1.0.0 <2.0.0'
