--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,11 @@
-name: serialize
+name: jaguar_serializer
 version: 0.0.1
 description: A simple console application.
+
 dependencies:
+  source_gen: ">=0.5.1+3 <0.6.0"
+  build: ">=0.4.1 <0.5.0"
+  yaml: ">=2.1.10 <3.0.0"
 
 dev_dependencies:
   test:
