--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ dependencies:
   source_gen: ">=0.5.1+3 <0.6.0"
   build: ">=0.4.1 <0.5.0"
   yaml: ">=2.1.10 <3.0.0"
+  intl:
 
 dev_dependencies:
   test:
