--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ dependencies:
   build: ">=0.4.1 <0.5.0"
   yaml: ">=2.1.10 <3.0.0"
   intl:
+  source_gen_help:
+    git: https://github.com/Jaguar-dart/source_gen_help.git
 
 dev_dependencies:
   test:
