--- a/serializer.yaml
+++ b/serializer.yaml
@@ -3,6 +3,9 @@ serializers:
 - example/field_manipulation/field_manipulation_main.dart
 - example/custom_field_processor/custom_field_processor.dart
 - example/user/user/user.dart
+- example/user/user/user_mongo.dart
+- example/user/book/book.dart
+- example/user/book/book_mongo.dart
 - test/serializer/builtin/models/player.dart
 - test/serializer/list/models/author.dart
 - test/serializer/list/models/book.dart
