--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ executables:
   serializer:
 
 dependencies:
-  source_gen: ">=0.5.1+3 <0.6.0"
+  source_gen: "^0.5.1"
   build: ">=0.4.1 <0.5.0"
   yaml: ">=2.1.10 <3.0.0"
   intl:
