--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jaguar_serializer
-version: 0.1.3
+version: 0.1.4
 description: Platform and format agnostic serializer built using source_gen
 authors:
 - Ravi Teja Gudapati <tejainece@gmail.com>
@@ -15,7 +15,9 @@ dependencies:
   yaml: ">=2.1.10 <3.0.0"
   intl:
   source_gen_help:
-    git: https://github.com/Jaguar-dart/source_gen_help.git
+    git:
+      url: https://github.com/Jaguar-dart/source_gen_help.git
+      ref: dbf0557
 
 dev_dependencies:
   test:
