--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,14 @@ homepage: http://jaguar-dart.github.io
 executables:
   serializer:
 
+environment:
+  sdk: ">=1.8.0 <2.0.0"
+
 dependencies:
   source_gen: "^0.5.1"
   build: ">=0.4.1 <0.5.0"
   yaml: ">=2.1.10 <3.0.0"
-  intl:
+  intl: ">=0.14.0 <0.15.0"
   source_gen_help:
     git:
       url: https://github.com/Jaguar-dart/source_gen_help.git
