--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   build: ">=0.4.1 <0.5.0"
   yaml: ">=2.1.10 <3.0.0"
   intl: ">=0.14.0 <0.15.0"
+  yamlicious: ^0.0.5
   source_gen_help:
     git:
       url: https://github.com/Jaguar-dart/source_gen_help.git
