--- a/serializer.yaml
+++ b/serializer.yaml
@@ -10,3 +10,4 @@ serializers:
 - test/serializer/common/models/bibliotek/author.dart
 - test/serializer/common/models/bibliotek/book.dart
 - test/serializer/common/models/address_book/address_book.dart
+- test/serializer/various/various.dart
