--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ description: Platform and format agnostic serializer built using source_gen
 authors:
 - Ravi Teja Gudapati <tejainece@gmail.com>
 - Kevin Segaud <segaud.kevin@gmail.com>
+- Hadrien Lejard <hadrien.lejard@gmail.com>
 homepage: http://jaguar-dart.github.io
 
 executables:
