pass inheritance test

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,7 @@ dependencies:
   intl: ">=0.14.0 <0.15.0"
   yamlicious: ^0.0.5
   source_gen_help:
-    git:
-      url: https://github.com/Jaguar-dart/source_gen_help.git
-      ref: 4acd8b6
+    path: /Users/lejard_h/github/source_gen_help
   jaguar_generator_config:
     git:
       url: https://github.com/Jaguar-dart/jaguar_generator_config.git
