--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jaguar_serializer
-version: 0.1.9
+version: 0.2.0
 description: Platform and format agnostic serializer built using source_gen
 authors:
 - Ravi Teja Gudapati <tejainece@gmail.com>
@@ -18,8 +18,7 @@ dependencies:
   yaml: ">=2.1.10 <3.0.0"
   intl: ">=0.14.0 <0.15.0"
   yamlicious: ^0.0.5
-  source_gen_help:
-    path: /Users/lejard_h/github/source_gen_help
+  source_gen_help: ^0.0.4
   jaguar_generator_config:
     git:
       url: https://github.com/Jaguar-dart/jaguar_generator_config.git
