--- a/serializer.yaml
+++ b/serializer.yaml
@@ -11,3 +11,4 @@ serializers:
 - test/serializer/common/models/bibliotek/book.dart
 - test/serializer/common/models/address_book/address_book.dart
 - test/serializer/various/various.dart
+- test/benchmark.dart
