--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jaguar_serializer
-version: 0.3.0
+version: 0.3.1
 description: Platform and format agnostic serializer built using source_gen
 authors:
 - Ravi Teja Gudapati <tejainece@gmail.com>
@@ -14,8 +14,9 @@ environment:
   sdk: ">=1.8.0 <2.0.0"
 
 dependencies:
-  source_gen: "^0.5.1"
-  build: ">=0.4.1 <0.5.0"
+  source_gen: ">=0.5.0 <0.6.0"
+  build: ">=0.7.0 <0.8.0"
+  build_runner: ">=0.3.0 <0.4.0"
   yaml: ">=2.1.10 <3.0.0"
   intl: ">=0.14.0 <0.15.0"
   yamlicious: ^0.0.5
