Exclude by default

--- a/serializer.yaml
+++ b/serializer.yaml
@@ -13,3 +13,4 @@ serializers:
 - test/serializer/various/various.dart
 - test/benchmark.dart
 - test/generator/inheritance.dart
+- test/serializer/excludeByDefault/excludeByDefault.dart
