--- a/serializer.yaml
+++ b/serializer.yaml
@@ -9,6 +9,7 @@ serializers:
 - test/serializer/common/models/player/player.dart
 - test/serializer/common/models/bibliotek/author.dart
 - test/serializer/common/models/bibliotek/book.dart
+- test/serializer/common/models/nested/nested.dart
 - test/serializer/common/models/address_book/address_book.dart
 - test/serializer/various/various.dart
 - test/benchmark.dart
