--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: jaguar_serializer
-version: 0.3.13
+version: 0.3.14
 description: Platform and format agnostic serializer built using source_gen
 authors:
 - Ravi Teja Gudapati <tejainece@gmail.com>
 - Kevin Segaud <segaud.kevin@gmail.com>
 - Hadrien Lejard <hadrien.lejard@gmail.com>
-homepage: http://jaguar-dart.github.io
+homepage: https://github.com/Jaguar-dart/jaguar_serializer
+documentation:
 
 executables:
   serializer:
