--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jaguar_serializer
-version: 0.3.16
+version: 0.4.0-dev
 description: Platform and format agnostic serializer built using source_gen
 authors:
 - Ravi Teja Gudapati <tejainece@gmail.com>
@@ -8,21 +8,13 @@ authors:
 homepage: https://github.com/Jaguar-dart/jaguar_serializer
 documentation:
 
-executables:
-  serializer:
-
 environment:
   sdk: ">=1.8.0 <2.0.0"
 
 dependencies:
-  source_gen: ">=0.5.0 <0.6.0"
-  build: ">=0.9.3 <0.10.0"
-  build_runner: ">=0.3.4 <0.4.0"
+  yamlicious: ^0.0.5
   yaml: ">=2.1.10 <3.0.0"
   intl: ">=0.14.0 <0.15.0"
-  yamlicious: ^0.0.5
-  source_gen_help: '>=0.0.4 <0.1.0'
-  jaguar_generator_config: '>=0.0.1 <0.1.0'
 
 transformers:
 - test/pub_serve:
