--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 sudo: false
 
 language: dart
+dart_task:
+- dartfmt
+- dartanalyzer
+- test: --platform vm
+- test: --platform chrome
+- test: --platform firefox
+- test: --platform dartium
+  install_dartium: true
+
 dart:
   - stable
   - dev
 
-cache:
-  directories:
-    - $HOME/.pub-cache
-
-before_script:
- - chmod +x ./tool/travis.sh
-
-script: ./tool/travis.sh
