--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,6 @@ dev_dependencies:
   yamlicious: ^0.0.5 
   yaml: ">=2.1.10 <3.0.0"
   # test and generate example
-  #build_runner: ^0.7.0
-  #jaguar_serializer_cli:
-  #  path: ../jaguar_serializer_cli
+  build_runner: ^0.7.0
+  jaguar_serializer_cli:
+    path: ../jaguar_serializer_cli
