better typing, no implicit cast

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,17 @@ environment:
   sdk: ">=2.0.0-dev <2.0.0"
 
 dev_dependencies:
+  browser:
   test:
   mongo_dart:
   intl: ">=0.15.0 <0.16.0"
   yamlicious: ^0.0.5 
   yaml: ">=2.1.10 <3.0.0"
   # test and generate example
-  build_runner: ^0.7.0
-  jaguar_serializer_cli:
-    path: ../jaguar_serializer_cli
+  #build_runner: ^0.7.0
+  #jaguar_serializer_cli:
+  #  path: ../jaguar_serializer_cli
+
+web:
+  compiler:
+    debug: dartdevc
