--- a/jaguar_serializer_cli/pubspec.yaml
+++ b/jaguar_serializer_cli/pubspec.yaml
@@ -11,10 +11,10 @@ environment:
   sdk: ">=2.0.0-dev <2.0.0"
 
 dependencies:
-  analyzer: ^0.30.0
-  build: ^0.11.0
+  analyzer: ^0.31.1
+  build: ^0.12.0
   logging: ^0.11.0
-  source_gen: ">=0.7.0 <0.8.0"
+  source_gen: ">=0.8.0 <0.9.0"
   jaguar_serializer: ^1.0.0-dev5
 
 dependency_overrides:
@@ -29,4 +29,5 @@ transformers:
 
 dev_dependencies:
   test: ^0.12.0
-  build_runner: ^0.7.0
+  build_runner: ^0.8.0
+  build_test: ^0.10.0
