use jser.dart instead of .g.dart to avoid collision

--- a/jaguar_serializer_cli/build.yaml
+++ b/jaguar_serializer_cli/build.yaml
@@ -4,6 +4,6 @@ builders:
     target: ":jaguar_serializer_cli"
     import: "package:jaguar_serializer_cli/jaguar_serializer_cli.dart"
     builder_factories: ["jaguarSerializer"]
-    build_extensions: {".dart": [".g.dart"]}
+    build_extensions: {".dart": [".jser.dart"]}
     auto_apply: root_package
     build_to: source
