--- a/.travis.yml
+++ b/.travis.yml
@@ -7,49 +7,30 @@ language: dart
 
 jobs:
   include:
-#    - stage: analyzer_and_format
-#      script: ./tool/travis.sh dartfmt
-#      env: PKG="example"
-#      dart: dev
-#    - stage: analyzer_and_format
-#      script: ./tool/travis.sh dartanalyzer
-#      env: PKG="example"
-#      dart: dev
-#    - stage: unit_test
-#      script: ./tool/travis.sh test
-#      env: PKG="example"
-#      dart: dev
-    - stage: analyzer_and_format
-      script: ./tool/travis.sh dartfmt
+    - stage: format
+      script: ./tool/travis.sh dartftmt
       env: PKG="jaguar_serializer"
       dart: dev
-#    - stage: analyzer_and_format
-#      script: ./tool/travis.sh dartfmt
-#      env: PKG="jaguar_serializer"
-#      dart: stable
-    - stage: analyzer_and_format
+    - stage: analyzer
       script: ./tool/travis.sh dartanalyzer
       env: PKG="jaguar_serializer"
       dart: dev
-#    - stage: analyzer_and_format
-#      script: ./tool/travis.sh dartanalyzer
-#      env: PKG="jaguar_serializer"
-#      dart: stable
-    - stage: analyzer_and_format
+    - stage: format
       script: ./tool/travis.sh dartfmt
       env: PKG="jaguar_serializer_cli"
       dart: dev
-#    - stage: analyzer_and_format
-#      script: ./tool/travis.sh dartanalyzer
-#      env: PKG="jaguar_serializer_cli"
-#      dart: stable
+    - stage: analyzer
+      script: ./tool/travis.sh dartanalyzer
+      env: PKG="jaguar_serializer_cli"
+      dart: dev
     - stage: unit_test
       script: ./tool/travis.sh test
       env: PKG="jaguar_serializer_cli"
       dart: dev
 
 stages:
-  - analyzer_and_format
+  - format
+  - analyzer
   - unit_test
 
 # Only building master means that we don't run two builds for each pull request.
