--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ language: dart
 jobs:
   include:
     - stage: format
-      script: ./tool/travis.sh dartftmt
+      script: ./tool/travis.sh dartfmt
       env: PKG="jaguar_serializer"
       dart: dev
     - stage: analyzer
