--- a/jaguar_serializer_cli/pubspec.yaml
+++ b/jaguar_serializer_cli/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jaguar_serializer_cli
-version: 1.2.1
+version: 2.0.1
 description: Platform and format agnostic serializer built using source_gen
 authors:
 - Ravi Teja Gudapati <tejainece@gmail.com>
@@ -15,11 +15,9 @@ dependencies:
   build: ^0.12.0
   logging: ^0.11.0
   source_gen: ">=0.8.0 <0.9.0"
-  jaguar_serializer: ^1.0.0-dev7
-
-dependency_overrides:
-  jaguar_serializer:
-    path: ../jaguar_serializer
+  jaguar_serializer: ^2.0.1
+  meta: ^1.1.5
+  collection: ^1.14.9
 
 dev_dependencies:
   test: ^0.12.0
