--- a/jaguar_serializer_cli/pubspec.yaml
+++ b/jaguar_serializer_cli/pubspec.yaml
@@ -24,3 +24,7 @@ dev_dependencies:
   build_runner: ^0.8.0
   build_test: ^0.10.0
   build_web_compilers: ^0.3.0
+
+dependency_overrides:
+  jaguar_serializer:
+    path: ../jaguar_serializer
