--- a/jaguar_serializer_cli/pubspec.yaml
+++ b/jaguar_serializer_cli/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jaguar_serializer_cli
-version: 2.0.4
+version: 2.1.1
 description: Platform and format agnostic serializer built using source_gen
 authors:
 - Ravi Teja Gudapati <tejainece@gmail.com>
@@ -25,6 +25,6 @@ dev_dependencies:
   build_test: ^0.10.0
   build_web_compilers: ^0.3.0
 
-dependency_overrides:
-  jaguar_serializer:
-    path: ../jaguar_serializer
+#dependency_overrides:
+#  jaguar_serializer:
+#    path: ../jaguar_serializer
