--- a/jaguar_serializer_cli/pubspec.yaml
+++ b/jaguar_serializer_cli/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jaguar_serializer_cli
-version: 2.1.12
+version: 2.1.14
 description: Platform and format agnostic serializer built using source_gen
 authors:
 - Ravi Teja Gudapati <tejainece@gmail.com>
@@ -15,7 +15,7 @@ dependencies:
   build: ^0.12.0
   logging: ^0.11.0
   source_gen: ">=0.8.0 <0.9.0"
-  jaguar_serializer: ^2.1.2
+  jaguar_serializer: ^2.1.5
   meta: ^1.1.5
 
 dev_dependencies:
@@ -24,3 +24,4 @@ dev_dependencies:
   build_test: ^0.10.0
   build_web_compilers: ^0.3.0
   collection: ^1.14.9
+  path: ^1.6.1
