--- a/jaguar_serializer_cli/pubspec.yaml
+++ b/jaguar_serializer_cli/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jaguar_serializer_cli
-version: 2.1.14
+version: 2.1.15
 description: Platform and format agnostic serializer built using source_gen
 authors:
 - Ravi Teja Gudapati <tejainece@gmail.com>
@@ -8,10 +8,10 @@ authors:
 homepage: https://github.com/Jaguar-dart/jaguar_serializer
 
 environment:
-  sdk: ">=2.0.0-dev <2.0.0"
+  sdk: '>=2.0.0-dev.64.1 <2.0.0'
 
 dependencies:
-  analyzer: ^0.31.1
+  analyzer: ^0.32.0
   build: ^0.12.0
   logging: ^0.11.0
   source_gen: ">=0.8.0 <0.9.0"
@@ -20,8 +20,8 @@ dependencies:
 
 dev_dependencies:
   test: ^0.12.0
-  build_runner: ^0.8.0
+  build_runner: ^0.9.0
   build_test: ^0.10.0
-  build_web_compilers: ^0.3.0
+  build_web_compilers: ^0.4.0
   collection: ^1.14.9
   path: ^1.6.1
