--- a/jaguar_serializer_cli/pubspec.yaml
+++ b/jaguar_serializer_cli/pubspec.yaml
@@ -14,14 +14,13 @@ dependencies:
   analyzer: ^0.31.0
   build: ^0.12.0
   logging: ^0.11.0
-  source_gen: ">=0.8.0 <0.9.0"
-  jaguar_serializer: ^2.1.10
+  source_gen: ^0.8.3
   meta: ^1.1.5
+  jaguar_serializer: ^2.1.10
 
 dev_dependencies:
-  test: ^0.12.0
+  test: ^1.2.0
   build_runner: ^0.9.0
-  build_test: ^0.10.0
   build_web_compilers: ^0.4.0
   collection: ^1.14.10
   path: ^1.6.1
