--- a/jaguar_serializer/pubspec.yaml
+++ b/jaguar_serializer/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jaguar_serializer
-version: 2.1.8
+version: 2.1.14
 description: Platform and format agnostic serializer built using source_gen
 authors:
 - Ravi Teja Gudapati <tejainece@gmail.com>
@@ -9,15 +9,12 @@ homepage: https://github.com/Jaguar-dart/jaguar_serializer
 documentation:
 
 environment:
-  sdk: ">=2.0.0-dev <2.0.0"
+  sdk: '>=2.0.0-dev.54 <2.0.0'
 
 dependencies:
   date_format: ^1.0.4
 
 dev_dependencies:
-  browser:
-  test:
-  intl: ">=0.15.0 <0.16.0"
   build_runner: ^0.9.0
   jaguar_serializer_cli:
     path: ../jaguar_serializer_cli
