--- a/jaguar_serializer_cli/pubspec.yaml
+++ b/jaguar_serializer_cli/pubspec.yaml
@@ -8,7 +8,7 @@ authors:
 homepage: https://github.com/Jaguar-dart/jaguar_serializer
 
 environment:
-  sdk: '>=2.0.0-dev.54 <3.0.0'
+  sdk: '>=2.0.0 <3.0.0'
 
 dependencies:
   analyzer: ^0.32.0
