--- a/jaguar_serializer_cli/pubspec.yaml
+++ b/jaguar_serializer_cli/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jaguar_serializer_cli
-version: 2.2.0
+version: 2.2.1
 description: Platform and format agnostic serializer built using source_gen
 authors:
 - Ravi Teja Gudapati <tejainece@gmail.com>
@@ -23,4 +23,4 @@ dev_dependencies:
   build_runner: ^0.10.0
   build_web_compilers: ^0.4.0
   build_test: ^0.10.3
-  collection: 0.14.11
+  collection: ^1.14.11
