--- a/protobuf/example/pubspec.yaml
+++ b/protobuf/example/pubspec.yaml
@@ -10,8 +10,7 @@ environment:
   sdk: '>=2.0.0 <3.0.0'
 
 dependencies:
-  jaguar_serializer_protobuf:
-    path: '../'
+  jaguar_serializer_protobuf: ^2.2.1
   collection:
 
 dev_dependencies:
